# e3tools

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: static.yml  testpypi.yml
docs/: README.md
docs/source/: conf.py  index.rst
examples/: e3conv.py  train_qm9.py
examples/models/: __init__.py  conv.py  transformer.py
src/e3tools/: __init__.py  _radius.py  _scatter.py
src/e3tools/nn/: __init__.py  _conv.py  _extract_irreps.py  _interaction.py  _layer_norm.py  _mlp.py  _pack_unpack.py  _repeat.py  _scaling.py  _tensor_product.py  _transformer.py
src/e3tools/utils/: __init__.py
tests/: test_attention.py  test_basic.py  test_equivariance.py  test_extract_irreps.py  test_fused_conv.py  test_layer_norm.py  test_pack_unpack.py  test_radius.py  test_scaling.py  test_scatter.py
